kataController, KataOrm, kataEntity and kataRoutes done
