# public/swagger.json
@@ -119,7 +119,7 @@
 				"operationId": "GetUsers",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "all users o user found by id",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -127,7 +127,65 @@
 						}
 					}
 				},
-				"description": "Enpoint to retreive the users in the collection \"Users\" of DB",
+				"description": "Endpoint to retreive the users in the collection 'Users' of DB",
+				"tags": [
+					"userController"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "ID of user to retreive (optional)",
+						"in": "query",
+						"name": "id",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteUser",
+				"responses": {
+					"200": {
+						"description": "message info if deletion was correct",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Endpoint to delete the users in the collection 'Users' of DB",
+				"tags": [
+					"userController"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "id of user to delete (optional)",
+						"in": "query",
+						"name": "id",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateUser",
+				"responses": {
+					"200": {
+						"description": "message info if CREATED was correct",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Endpoint to create the users in the collection 'Users' of DB",
 				"tags": [
 					"userController"
 				],
@@ -135,8 +193,47 @@
 				"parameters": [
 					{
 						"in": "query",
+						"name": "user",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/users/{id}": {
+			"put": {
+				"operationId": "UpdateUser",
+				"responses": {
+					"200": {
+						"description": "message info if updated was correct",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Endpoint to update the users in the collection 'Users' of DB",
+				"tags": [
+					"userController"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "ID of user to UPDATE",
+						"in": "query",
 						"name": "id",
-						"required": false,
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "user",
+						"required": true,
 						"schema": {
 							"type": "string"
 						}
