# src/routes/userRouter.ts
@@ -1,7 +1,6 @@
 import express, { Request, Response, response } from "express";
 import { UserController } from "../controller/usersController";
 import { LogInfo } from "../utils/logger";
-import { createUser } from '../domain/orm/user.orm';
 
 //Router from express
 let userRouter = express.Router()
@@ -33,20 +32,19 @@ userRouter.route('/')
     })
     //post
     .post(async (req: Request, res: Response) => {
-
         let name: any = req?.query?.name;
-        let age: any = req?.query?.age;
+        let edad: any = req?.query?.edad;
         let email: any = req?.query?.email;
-
+        LogInfo(`Query param: ${name}, ${email}, ${edad} `)
         //controller instance to excute method 
         const controller: UserController = new UserController()
         //obtain response
         let user = {
             name: name || "default name",
             email: email || "default email",
-            edad: age || 18
+            edad: edad || 18
         }
-        const response = await controller.createUser(user);
+        const response: any = await controller.createUser(user);
         //send to he client the response
         return res.send(response)
     })
@@ -64,7 +62,7 @@ userRouter.route('/')
             email: email,
             edad: edad
         }
-        const response = await controller.updateUser(id, user);
+        const response: any = await controller.updateUser(id, user);
         //send to he client the response
         return res.send(response)
     })
